pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart.type_promotion.expect
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:13:7: Context: Write to a@323
    a = /*error:INVALID_ASSIGNMENT*/ "hi";
      ^
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:14:7: Context: Write to a@323
    a = 3;
      ^
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:16:7: Context: Write to b@426
    b = /*error:INVALID_ASSIGNMENT*/ "hi";
      ^
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:17:7: Context: Write to b@426
    b = 4;
      ^
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:19:7: Context: Write to c@529
    c = /*error:INVALID_ASSIGNMENT*/ "hi";
      ^
pkg/front_end/testcases/inference/infer_type_on_var_from_field.dart:20:7: Context: Write to c@529
    c = 4;
      ^
